# rustlight

./: .gitignore  .gitmodules  .travis.yml  Cargo.toml  README.md  Singularity  build.rs  run.py  run_plane_exp.sh  scene.json
.github/workflows/: main.yml
data/: cbox.blend  cbox.json  cbox.mtl  cbox.xml
data/cbox_mts/: cbox_pt.xml
data/cbox_mts/meshes/cbox/Scene/00001/: Cube_000_0000_m000.serialized
data/meshes/cbox/Scene/00001/: Cube_001_0000_m000.serialized  Cube_002_0000_m000.serialized  Cube_003_0000_m000.serialized  Cube_004_0000_m000.serialized  Plane_001_0000_m000.serialized
examples/: cli.rs
examples/web/: .gitignore  Cargo.toml  README.md  index.html
examples/web/src/: lib.rs
scripts/: paper_figures.py  steps.py  tonemap.py
src/: accel.rs  camera.rs  color.rs  emitter.rs  geometry.rs  integrator.rs  lib.rs  main.rs  material.rs  math.rs  path.rs  sampler.rs  scene.rs  scene_loader.rs  structure.rs  tools.rs  volume.rs
src/bsdfs/: blend.rs  diffuse.rs  distribution.rs  glass.rs  metal.rs  mod.rs  pbrt.rs  phong.rs  specular.rs  substrate.rs  utils.rs
src/integrators/: ao.rs  avg.rs  direct.rs  equal_time.rs  explicit.rs  mod.rs  path.rs  path_explicit.rs  prelude.rs  pssmlt.rs
src/integrators/explicit/: bre.rs  light.rs  mod.rs  path.rs  path_kulla.rs  plane_single.rs  point_normal.rs  point_normal_poly.rs  poly.rs  uncorrelated_plane_single.rs  vol_primitives.rs  vpl.rs
src/integrators/gradient/: avg.rs  explicit.rs  mod.rs  path.rs  recons.rs
src/integrators/gradient/shiftmapping/: diffuse.rs  mod.rs  random_replay.rs
src/integrators/gradient_domain/: gradient_path.rs  gradient_path_explicit.rs  mod.rs
src/integrators/mcmc/: erpt.rs  mod.rs  pssmlt.rs  smcmc.rs
src/paths/: edge.rs  mod.rs  path.rs  shift_path.rs  strategy.rs  strategy_dir.rs  strategy_light.rs  vertex.rs
src/paths/shift_op/: geometric.rs  mod.rs  random_replay.rs
src/paths/strategies/: directional.rs  emitters.rs  mod.rs  naive.rs
src/rustlight/: camera.rs  geometry.rs  integrator.rs  mod.rs  sampler.rs  scene.rs  structure.rs
src/samplers/: independent.rs  mcmc.rs  mod.rs  stratified.rs
tests/: .gitignore  launch.py  run_pbrt.sh
