[package]
name = "rustlight"
version = "0.2.0"
authors = ["Adrien Gruson <adrien.gruson@gmail.com>"]
edition = "2018"

[features]
default = ["image", "pbrt", "progress-bar", "mitsuba"]
pbrt = ["pbrt_rs"]
mitsuba = ["mitsuba_rs"]
embree = ["embree-rs"]
progress-bar = ["pbr"]

[dependencies]
byteorder = "*"
cgmath = { version = "*" }
embree-rs = { version = "*" , optional = true }
image = { version =  "*", optional = true }
openexr = { version = "*", optional = true }
log = "*"
rand = { version = "*", features = ["small_rng"] }
rayon = "*"
tobj = "*"
pbr = { version = "*", optional = true }
pbrt_rs = { git = "https://github.com/beltegeuse/pbrt_rs", optional = true }
#pbrt_rs = { path = "../pbrt_rs", optional = true }
#mitsuba_rs = { git = "https://github.com/beltegeuse/mitsuba_rs", optional = true, features = ["serialized", "ply"] } 
mitsuba_rs = { path = "../mitsuba_rs", optional = true, features = ["serialized", "ply"] }
lazy_static = "1.4"
assert_approx_eq = "1.1"
bitflags = "*"

[dev-dependencies]
clap = "*"
num_cpus = "*"
log4rs = "*"