[package]
name = "rustlight"
version = "0.2.0"
authors = ["Adrien Gruson <adrien.gruson@gmail.com>"]
edition = "2018"

[features]
default = ["image", "pbrt", "mitsuba"] # "progress-bar"
pbrt = ["pbrt_rs"]
mitsuba = ["mitsuba_rs"]
embree-accel = ["embree"]
progress-bar = ["pbr"]

[dependencies]
byteorder = "*"
cgmath = { version = "*" }
# Embree with cgmath version fixed (original repository: https://github.com/Twinklebear/embree-rs)
embree = { git = "https://github.com/beltegeuse/embree-rs", optional = true }
image = { version =  "*", optional = true }
# OpenEXR (version 3 or 2)
openexr = { git = "https://github.com/beltegeuse/openexr-rs", optional = true } # Version 3
# openexr = { version = "*", optional = true } # Version 2
log = "*"
rand = { version = "*", features = ["small_rng"] }
rayon = "*"
pbr = { version = "*", optional = true }
tobj = "*"
pbrt_rs = { git = "https://github.com/beltegeuse/pbrt_rs", optional = true }
mitsuba_rs = { git = "https://github.com/beltegeuse/mitsuba_rs", optional = true, features = ["serialized", "ply"] } 
lazy_static = "1.4"
assert_approx_eq = "1.1"
bitflags = "*"
itertools = "*" # For partition
float_extras = "*" # For ldexp
roots = "*" # For solving cubic

[dev-dependencies]
clap = "*"
num_cpus = "*"
log4rs = "*"

# For flamegraph (only for developpment)
#[profile.release]
#debug = true