[package]
name = "rustlight"
version = "0.2.0"
authors = ["Adrien Gruson <adrien.gruson@gmail.com>"]
edition = "2018"

[features]
default = ["image", "pbrt", "mitsuba"] # "progress-bar"
pbrt = ["pbrt_rs"]
mitsuba = ["mitsuba_rs"]
embree-accel = ["embree"]
progress-bar = ["pbr"]

[dependencies]
byteorder = "1.5"
cgmath = { version = "0.18" }
#embree = { version = "*" , optional = true }
embree = { git = "https://github.com/beltegeuse/embree-rs", optional = true }
image = { version =  "0.24", optional = true }
# openexr = { version = "*", optional = true } # OpenEXR 2
openexr = { git = "https://github.com/beltegeuse/openexr-rs", optional = true } # Contains Openexr 3 fix
log = "0.4"
rand = { version = "0.8", features = ["small_rng"] }
rayon = "1.8"
tobj = "4"
pbr = { version = "1", optional = true }
pbrt_rs = { git = "https://github.com/beltegeuse/pbrt_rs", optional = true }
# pbrt_rs = { path = "../pbrt_rs", optional = true }
mitsuba_rs = { git = "https://github.com/beltegeuse/mitsuba_rs", optional = true, features = ["serialized", "ply"] } 
#mitsuba_rs = { path = "../../mitsuba_rs", optional = true, features = ["serialized", "ply"] }
lazy_static = "1"
assert_approx_eq = "1"
bitflags = "2.4"
nalgebra = "0.32"
itertools = "0.12" # For partition
float_extras = "0.1" # For ldexp
roots = "0.0.8"

[dev-dependencies]
clap = { version = "4.4", features = ["derive"] }
num_cpus = "1"
log4rs = "1.2"

# For flamegraph if needed
#[profile.release]
#debug = true