[package]
name = "rustlight-web"
version = "0.1.0"
authors = ["beltegeuse <adrien.gruson@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"] # "rlib"

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "*"
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "*", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
# wee_alloc = { version = "*", optional = true } # Removed as it is not maintained anymore
# Rendering library
rustlight = { path = "../../", default-features = false, features = ["pbrt"] }
pbrt_rs = { git = "https://github.com/beltegeuse/pbrt_rs.git" }
cgmath = "*"
getrandom = { version = "0.2", features = ["js"] }

[dependencies.web-sys]
version = "*"
features = [
  'ImageData',
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]

[dev-dependencies]
wasm-bindgen-test = "*"

[profile.release]
# Tell `rustc` to optimize for small code size.
# opt-level = "s"
